unpackaged/main/default/objects/Lead/fields/AbilToTreatmentID__c.field-meta.xml
<CustomField>
    <fullName>AbilToTreatmentID__c</fullName>
    <description>AbilTo Treatment ID</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <inlineHelpText>Treatment ID</inlineHelpText>
    <label>AbleTo Treatment ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>