unpackaged/main/default/objects/Lead/fields/AbleTo_Participant_ID__c.field-meta.xml
<CustomField>
    <fullName>AbleTo_Participant_ID__c</fullName>
    <defaultValue>"0"</defaultValue>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>AbleTo Participant ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>