unpackaged/main/default/objects/Lead/fields/Ableto_Suitable__c.field-meta.xml
<CustomField>
    <fullName>Ableto_Suitable__c</fullName>
    <label>Ableto Suitable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>