unpackaged/main/default/objects/Lead/fields/AbleToPriorEngagement__c.field-meta.xml
<CustomField>
    <fullName>AbleToPriorEngagement__c</fullName>
    <description>AbilTo Prior Engagement?</description>
    <inlineHelpText>Have you engaged this member before?</inlineHelpText>
    <label>AbleTo Prior Engagement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PriorEngagement</valueSetName>
    </valueSet>
</CustomField>