unpackaged/main/default/objects/Lead/fields/AbleToProgram__c.field-meta.xml
<CustomField>
    <fullName>AbleToProgram__c</fullName>
    <description>AbilTo Program

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>AbilTo Program the Customer is recommended for</inlineHelpText>
    <label>AbleTo Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Program</valueSetName>
    </valueSet>
</CustomField>