unpackaged/main/default/objects/Lead/fields/Acquisition_Email_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Acquisition_Email_Campaign__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>For braze email campaigns</inlineHelpText>
    <label>Acquisition Email Campaign</label>
    <type>TextArea</type>
</CustomField>