unpackaged/main/default/objects/Lead/fields/ApprovedNPPviaEmail__c.field-meta.xml
<CustomField>
    <fullName>ApprovedNPPviaEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Approved Notice of Privacy Practice</description>
    <inlineHelpText>Member gave consent for AbilTo to email Notice of Privacy Practices and other items related to program participation.</inlineHelpText>
    <label>Approved NPP via Email</label>
    <type>Checkbox</type>
</CustomField>