unpackaged/main/default/objects/Lead/fields/Archived_Referrals__c.field-meta.xml
<CustomField>
    <fullName>Archived_Referrals__c</fullName>
    <inlineHelpText>indicates the number of referrals that have been archived and no longer in Salesforce. For assistance with locating the archived records please see the salesforce administrator.</inlineHelpText>
    <label>Archived Referrals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>