unpackaged/main/default/objects/Lead/fields/Area_Code_2__c.field-meta.xml
<CustomField>
    <fullName>Area_Code_2__c</fullName>
    <label>Area Code 2</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>