unpackaged/main/default/objects/Lead/fields/Area_Code__c.field-meta.xml
<CustomField>
    <fullName>Area_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Area Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>