unpackaged/main/default/objects/Lead/fields/Begin_Calling__c.field-meta.xml
<CustomField>
    <fullName>Begin_Calling__c</fullName>
    <description>Date after which we will begin calling lead.  Currently only used for BCBSLA Prior Authorization date, since loading leads prior to procedure.  Ignored in "Callable" formula if NULL.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Begin Calling Date</label>
    <type>Date</type>
</CustomField>