unpackaged/main/default/objects/Lead/fields/Benefit_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Indicator__c</fullName>
    <formula>IF(ISPICKVAL( CustomerStatus__c  , "Closed_Benefits"), IMAGE("/servlet/servlet.FileDownload?file=01536000003beua", "Closed_Benefits,",90,90),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Benefit Indicator</label>
    <type>Text</type>
</CustomField>