unpackaged/main/default/objects/Lead/fields/BenefitCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>BenefitCheckStatus__c</fullName>
    <description>Confirming the status of the Benefit Check run on these Customers</description>
    <inlineHelpText>Status of the Customer's benefits</inlineHelpText>
    <label>Benefit Check Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BenefitCheckStatus</valueSetName>
    </valueSet>
</CustomField>