unpackaged/main/default/objects/Lead/fields/Big_Red_Button__c.field-meta.xml
<CustomField>
    <fullName>Big_Red_Button__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check box associated with Big Red Button process build. for leads that need to be refreshed this will erase necessary fields.</description>
    <inlineHelpText>Check box associated with Big Red Button process build. for leads that need to be refreshed this will erase necessary fields.</inlineHelpText>
    <label>Big Red Button</label>
    <type>Checkbox</type>
</CustomField>