unpackaged/main/default/objects/Lead/fields/BIg_Red_Button_Last_Modified_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>BIg_Red_Button_Last_Modified_Date_Time__c</fullName>
    <description>formula that reduces the last modified date for use in time trigger for big red button</description>
    <formula>LastModifiedDate - 0.03800</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BIg Red Button Last Modified Date/Time</label>
    <type>DateTime</type>
</CustomField>