unpackaged/main/default/objects/Lead/fields/Brain_Health__c.field-meta.xml
<CustomField>
    <fullName>Brain_Health__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for marketo email preference center</inlineHelpText>
    <label>Brain Health</label>
    <type>Checkbox</type>
</CustomField>