unpackaged/main/default/objects/Lead/fields/Call_Quality_Issues__c.field-meta.xml
<CustomField>
    <fullName>Call_Quality_Issues__c</fullName>
    <description>Poor Audio Quality - Static or voices cutting in and out throughout whole call
No Audio - mutual connection, yet no audio comes through</description>
    <inlineHelpText>Poor Audio Quality - Static or voices cutting in and out throughout whole call
No Audio - mutual connection, yet no audio comes through</inlineHelpText>
    <label>Call Quality Issues</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Poor Audio Quality</fullName>
            </value>
            <value>
                <fullName>No Audio</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>