unpackaged/main/default/objects/Lead/fields/Call_Recording__c.field-meta.xml
<CustomField>
    <fullName>Call_Recording__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confirmation that ECS has told the member (or anyone else on the phone) that the call is being recorded</inlineHelpText>
    <label>CALL IS RECORDED</label>
    <type>Checkbox</type>
</CustomField>