unpackaged/main/default/objects/Lead/fields/Callable__c.field-meta.xml
<CustomField>
    <fullName>Callable__c</fullName>
    <formula>IF(
   Manual_Override__c="TRUE" 
   ||(NOT(ISNULL(Begin_Calling__c)) &amp;&amp; Begin_Calling__c&gt;TODAY()) 
   ||(TODAY()- DATEVALUE(Last_Referral_Date__c))&gt;365 
   ||DoNotCall 
   ||Age__c &lt; 18 
   ||ISPICKVAL(PhoneLookup__c,"Pending")
   ||ISPICKVAL( Target__c, "Joyable")
   ||EC_Reserve__c,

   "Not_Callable", 

   IF(ISPICKVAL(CustomerStatus__c,"New") 
   || ISPICKVAL(CustomerStatus__c,"In_Process") 
   || ISPICKVAL(CustomerStatus__c,"Monitoring_Deductible"), "Callable", "Closed") 
)</formula>
    <inlineHelpText>Dictates whether lead is callable</inlineHelpText>
    <label>Callable</label>
    <type>Text</type>
</CustomField>