unpackaged/main/default/objects/Lead/fields/CallCounter__c.field-meta.xml
<CustomField>
    <fullName>CallCounter__c</fullName>
    <description>Call Counter</description>
    <inlineHelpText>Call Counter</inlineHelpText>
    <label>Call Counter</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>