unpackaged/main/default/objects/Lead/fields/Campaign_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Sent_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date in which we had sent the campaign</inlineHelpText>
    <label>Campaign Sent Date</label>
    <type>Date</type>
</CustomField>