unpackaged/main/default/objects/Lead/fields/Campaign_Specifics__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Specifics__c</fullName>
    <inlineHelpText>Identifies the value linked to the campaign</inlineHelpText>
    <label>Campaign Specifics</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Campaigns__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Holistic health - eligibility</fullName>
            </value>
            <value>
                <fullName>Holistic health - follow-up</fullName>
            </value>
            <value>
                <fullName>Holistic health - health &amp; you</fullName>
            </value>
            <value>
                <fullName>Stress health - HTML</fullName>
            </value>
            <value>
                <fullName>Stress health - Letter</fullName>
            </value>
            <value>
                <fullName>Holistic health- HTML</fullName>
            </value>
            <value>
                <fullName>Holistic health- Letter</fullName>
            </value>
            <value>
                <fullName>Medical health- HTML</fullName>
            </value>
            <value>
                <fullName>Medical health - Letter</fullName>
            </value>
            <value>
                <fullName>Winning Cohort</fullName>
            </value>
            <value>
                <fullName>Holistic health - eligibility 2</fullName>
            </value>
            <value>
                <fullName>Holistic health - health &amp; you 2</fullName>
            </value>
            <value>
                <fullName>Holistic health - follow-up 2</fullName>
            </value>
            <value>
                <fullName>Holistic health - eligibility 3</fullName>
            </value>
            <value>
                <fullName>Horizon Interim</fullName>
            </value>
            <value>
                <fullName>Holistic Health Letter 2nd</fullName>
            </value>
            <value>
                <fullName>Holistic Health HTML 2nd</fullName>
            </value>
            <value>
                <fullName>Holistic Health Letter 3rd</fullName>
            </value>
            <value>
                <fullName>Holistic Health HTML 3rd</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Stress health 2 - HTML</fullName>
            </value>
            <value>
                <fullName>Stress health 2 - Letter</fullName>
            </value>
            <value>
                <fullName>Medical health - HTML - 2</fullName>
            </value>
            <value>
                <fullName>Medical health - Letter - 2</fullName>
            </value>
            <value>
                <fullName>Horizon Lookup</fullName>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Aetna Warmup</fullName>
            </value>
            <value>
                <fullName>Costco Append</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>