unpackaged/main/default/objects/Lead/fields/CampaignIndicator_c__c.field-meta.xml
<CustomField>
    <fullName>CampaignIndicator_c__c</fullName>
    <formula>IF(ISPICKVAL(Campaigns__c , "Reengage"), IMAGE("/servlet/servlet.FileDownload?file=01536000002MCqP", "Reengage,",60,120), 
IF(ISPICKVAL(Campaigns__c , "Horizon"), IMAGE("/servlet/servlet.FileDownload?file=01536000002MCqP", "Horizon,",60,120), 
IF(ISPICKVAL(Campaigns__c , "Warmup"), IMAGE("/servlet/servlet.FileDownload?file=01536000002MCqP", "Warmup,",60,120), 
IF(ISPICKVAL(Campaigns__c, "Hand Raiser"), IMAGE("/servlet/servlet.FileDownload?file=015360000025D8q", "Hand Raiser",60,120),null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Campaign Indicator</label>
    <type>Text</type>
</CustomField>