unpackaged/main/default/objects/Lead/fields/Campaigns__c.field-meta.xml
<CustomField>
    <fullName>Campaigns__c</fullName>
    <inlineHelpText>Identifies the specific campaign that the lead is in</inlineHelpText>
    <label>Campaigns</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reengage</fullName>
            </value>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>Warmup</fullName>
            </value>
            <value>
                <fullName>FAQ</fullName>
            </value>
            <value>
                <fullName>Hand Raiser</fullName>
            </value>
            <value>
                <fullName>Rev It Up</fullName>
            </value>
            <value>
                <fullName>Reengage - Append</fullName>
            </value>
            <value>
                <fullName>Hurrican Relief</fullName>
            </value>
            <value>
                <fullName>Hurricane Relief</fullName>
            </value>
            <value>
                <fullName>Graduates</fullName>
            </value>
            <value>
                <fullName>2018 Campaigns</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>