unpackaged/main/default/objects/Lead/fields/Cancer__c.field-meta.xml
<CustomField>
    <fullName>Cancer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Cancer</label>
    <type>Checkbox</type>
</CustomField>