unpackaged/main/default/objects/Lead/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <description>THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Formerly Plan Name</inlineHelpText>
    <label>Client Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Client</valueSetName>
    </valueSet>
</CustomField>