unpackaged/main/default/objects/Lead/fields/Clinical_Category__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Category__c</fullName>
    <description>Original clinical algorithm output</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Clinical Category</label>
    <length>10</length>
    <type>Text</type>
</CustomField>