unpackaged/main/default/objects/Lead/fields/Coaching_Status__c.field-meta.xml
<CustomField>
    <fullName>Coaching_Status__c</fullName>
    <inlineHelpText>this field indicates if the individual has been through a free coaching session</inlineHelpText>
    <label>Coaching Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Not Completed</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>