unpackaged/main/default/objects/Lead/fields/Confidential__c.field-meta.xml
<CustomField>
    <fullName>Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Confidential Record (All details are hidden from users).</inlineHelpText>
    <label>Confidential</label>
    <type>Checkbox</type>
</CustomField>