unpackaged/main/default/objects/Lead/fields/Contract_Eligible__c.field-meta.xml
<CustomField>
    <fullName>Contract_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Eligible</label>
    <type>Checkbox</type>
</CustomField>