unpackaged/main/default/objects/Lead/fields/Cost_Share_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Cost_Share_Acknowledged__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Customer has acknowledged out of pocket responsiblity</inlineHelpText>
    <label>COST SHARE ACKNOWLEDGED</label>
    <type>Checkbox</type>
</CustomField>