unpackaged/main/default/objects/Lead/fields/CostSharingConversation__c.field-meta.xml
<CustomField>
    <fullName>CostSharingConversation__c</fullName>
    <description>Result of the Cost Sharing Conversation (Text)

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>As of (date)- $x Ded, $x Copay  or x% Coinsurance, plan reset (date)</inlineHelpText>
    <label>COST SHARING CONVERSATION</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>