unpackaged/main/default/objects/Lead/fields/Create_a_Referral__c.field-meta.xml
<CustomField>
    <fullName>Create_a_Referral__c</fullName>
    <label>Create a Referral</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>