unpackaged/main/default/objects/Lead/fields/Created_Date_Age__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Age__c</fullName>
    <formula>TODAY () - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date Age</label>
    <precision>18</precision>
    <scale>7</scale>
    <type>Number</type>
</CustomField>