unpackaged/main/default/objects/Lead/fields/CustomerAccount__c.field-meta.xml
<CustomField>
    <fullName>CustomerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This lead is connected with this Customer.</inlineHelpText>
    <label>Customer Account</label>
    <referenceTo>Customer__c</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>Leads</relationshipName>
    <type>Lookup</type>
</CustomField>