unpackaged/main/default/objects/Lead/fields/CustomerID__c.field-meta.xml
<CustomField>
    <fullName>CustomerID__c</fullName>
    <description>Customer Identification Number

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
    <inlineHelpText>Formerly known as Health Plan ID#</inlineHelpText>
    <label>Customer ID</label>
    <length>35</length>
    <type>Text</type>
</CustomField>