unpackaged/main/default/objects/Lead/fields/CustomerStatus__c.field-meta.xml
<CustomField>
    <fullName>CustomerStatus__c</fullName>
    <description>Status of the Customer Record

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>The end result after speaking with the customer.</inlineHelpText>
    <label>Customer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomerStatus</valueSetName>
    </valueSet>
</CustomField>