unpackaged/main/default/objects/Lead/fields/DateFAQRequested__c.field-meta.xml
<CustomField>
    <fullName>DateFAQRequested__c</fullName>
    <description>When did the Customer Request an FAQ be sent out</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did the Customer Request an FAQ be sent out</inlineHelpText>
    <label>Date Paper FAQ Requested</label>
    <type>DateTime</type>
</CustomField>