unpackaged/main/default/objects/Lead/fields/DateTimeICScheduled__c.field-meta.xml
<CustomField>
    <fullName>DateTimeICScheduled__c</fullName>
    <description>Date/Time Field Populated via Formula</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time Field Populated via Formula</inlineHelpText>
    <label>Date/Time IC Scheduled</label>
    <type>DateTime</type>
</CustomField>