unpackaged/main/default/objects/Lead/fields/DateTimeReferredforHardship__c.field-meta.xml
<CustomField>
    <fullName>DateTimeReferredforHardship__c</fullName>
    <description>Date/Time Timestamp for member being referred for Financial Hardship.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date/Time Timestamp for member being referred for Financial Hardship.</inlineHelpText>
    <label>Date/Time Referred for Hardship</label>
    <type>DateTime</type>
</CustomField>