unpackaged/main/default/objects/Lead/fields/Deductible_Apply__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Apply__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for data team to select. for use in the hdhp indicator</inlineHelpText>
    <label>Deductible Apply?</label>
    <type>Checkbox</type>
</CustomField>