unpackaged/main/default/objects/Lead/fields/Deductible_Met__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Met__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for use with the hdhp indicator formula populated by the data team</inlineHelpText>
    <label>Deductible Met</label>
    <type>Checkbox</type>
</CustomField>