unpackaged/main/default/objects/Lead/fields/Deductible_Reached__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Reached__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>if checked it means lead has met deductible.</inlineHelpText>
    <label>Deductible Reached</label>
    <type>Checkbox</type>
</CustomField>