unpackaged/main/default/objects/Lead/fields/Diabetes__c.field-meta.xml
<CustomField>
    <fullName>Diabetes__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>For Marketo Email Preference Center</inlineHelpText>
    <label>Diabetes</label>
    <type>Checkbox</type>
</CustomField>