unpackaged/main/default/objects/Lead/fields/Dialer_Phone_Type__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Phone_Type__c</fullName>
    <description>Landline, Mobile, or VOIP for predictive and texting purposes</description>
    <inlineHelpText>Landline, Mobile, or VOIP</inlineHelpText>
    <label>Dialer Phone Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Landline</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>VOIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>