unpackaged/main/default/objects/Lead/fields/DialerSkill__c.field-meta.xml
<CustomField>
    <fullName>DialerSkill__c</fullName>
    <description>Dialer Skill</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Dialer Skill</inlineHelpText>
    <label>Dialer Skill</label>
    <length>50</length>
    <type>Text</type>
</CustomField>