unpackaged/main/default/objects/Lead/fields/DialerStatus__c.field-meta.xml
<CustomField>
    <fullName>DialerStatus__c</fullName>
    <description>Dialer Status</description>
    <inlineHelpText>Is this lead record ready to be Dialed?</inlineHelpText>
    <label>Dialer Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Dialer_Status</valueSetName>
    </valueSet>
</CustomField>