unpackaged/main/default/objects/Lead/fields/Digital_FAQ__c.field-meta.xml
<CustomField>
    <fullName>Digital_FAQ__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If the individual wants a FAQ emailed</description>
    <inlineHelpText>If the individual wants a FAQ emailed</inlineHelpText>
    <label>Digital FAQ Request</label>
    <type>Checkbox</type>
</CustomField>