unpackaged/main/default/objects/Lead/fields/Digital_FAQ_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Digital_FAQ_Request_Date__c</fullName>
    <description>Records the date the Digital FAQ Request field was set to true.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Records the date the Digital FAQ Request field was set to true.</inlineHelpText>
    <label>Digital FAQ Request Date</label>
    <type>DateTime</type>
</CustomField>