unpackaged/main/default/objects/Lead/fields/Digital_FAQ_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Digital_FAQ_Time_Stamp__c</fullName>
    <formula>IF(  Digital_FAQ__c  = TRUE, NOW(), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digital FAQ Time Stamp</label>
    <type>DateTime</type>
</CustomField>