unpackaged/main/default/objects/Lead/fields/DNC_Source__c.field-meta.xml
<CustomField>
    <fullName>DNC_Source__c</fullName>
    <inlineHelpText>indicates what the source of the do not call request is coming from</inlineHelpText>
    <label>DNC Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client</fullName>
            </value>
            <value>
                <fullName>Dialer Disposition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>