unpackaged/main/default/objects/Lead/fields/Do_Not_Call_Date_Time_Stamp__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call_Date_Time_Stamp__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Do Not Call Date/Time Stamp</label>
    <type>DateTime</type>
</CustomField>