unpackaged/main/default/objects/Lead/fields/Donation__c.field-meta.xml
<CustomField>
    <fullName>Donation__c</fullName>
    <label>Donation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Donation</valueSetName>
    </valueSet>
</CustomField>