unpackaged/main/default/objects/Lead/fields/DoNotCall__c.field-meta.xml
<CustomField>
    <fullName>DoNotCall__c</fullName>
    <description>Do Not Call Checkbox</description>
    <formula>IF(
 CustomerAccount__r.DoNotCall__c,
true,
false)</formula>
    <inlineHelpText>This member has requested not to be called.</inlineHelpText>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>