unpackaged/main/default/objects/Lead/fields/EC_Reserve__c.field-meta.xml
<CustomField>
    <fullName>EC_Reserve__c</fullName>
    <defaultValue>false</defaultValue>
    <label>EC Reserve</label>
    <type>Checkbox</type>
</CustomField>