unpackaged/main/default/objects/Lead/fields/Eligibility_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Expiration_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility Expiration Date</label>
    <type>Date</type>
</CustomField>