unpackaged/main/default/objects/Lead/fields/Email_Alias__c.field-meta.xml
<CustomField>
    <fullName>Email_Alias__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Alias</label>
    <type>Email</type>
</CustomField>