unpackaged/main/default/objects/Lead/fields/Email_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Email_Lookup__c</fullName>
    <inlineHelpText>For use with email from Data team</inlineHelpText>
    <label>Email Lookup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Refreshed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>