unpackaged/main/default/objects/Lead/fields/Email_Unsubscribe__c.field-meta.xml
<CustomField>
    <fullName>Email_Unsubscribe__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>for use with marketing campaigns in order to determine who has unsubscribed.</inlineHelpText>
    <label>Email Unsubscribe</label>
    <type>Checkbox</type>
</CustomField>