unpackaged/main/default/objects/Lead/fields/EscalationElevation__c.field-meta.xml
<CustomField>
    <fullName>EscalationElevation__c</fullName>
    <description>Is this an Escalated Lead?

THIS FIELD IS TRANSFERRED TO ENABLETO</description>
    <inlineHelpText>Was this lead Escalated to Clinical or Management?</inlineHelpText>
    <label>Escalation/Elevation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Elevation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>